plugins {
    id 'org.springframework.boot' version "${springBootVersion}"
    id 'io.spring.dependency-management' version '1.0.13.RELEASE'
    id 'java'
}

group = 'br.com.wacase'
version = "${appVersion}"
sourceCompatibility = JavaVersion.VERSION_17
targetCompatibility = JavaVersion.VERSION_17

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}



springBoot {
    mainClass = 'br.com.wacase.WacaseApplication'
}

jar {
    archivesBaseName = 'app'
    version = "${appVersion}"
    manifest {
        attributes(
                'Main-Class': 'br.com.wacase.WacaseApplication'
        )
    }
}

dependencies {
    implementation "org.springframework.boot:spring-boot-starter-webflux:${springBootVersion}"
    implementation "org.springframework.boot:spring-boot-starter-data-r2dbc:${springBootVersion}"

    implementation 'org.springframework.data:spring-data-r2dbc:1.5.2'
    implementation 'io.r2dbc:r2dbc-h2:0.9.1.RELEASE'

    implementation 'io.projectreactor.tools:blockhound:1.0.6.RELEASE'
    implementation "io.projectreactor:reactor-tools:${reactorVersion}"

    compileOnly "org.projectlombok:lombok:${lombokVersion}"
    developmentOnly "org.springframework.boot:spring-boot-devtools:${springBootVersion}"



    testImplementation 'com.h2database:h2:2.1.214'
    annotationProcessor "org.springframework.boot:spring-boot-configuration-processor:${springBootVersion}"
    annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
    testImplementation "org.springframework.boot:spring-boot-starter-test:${springBootVersion}"
    testImplementation 'io.projectreactor:reactor-test:3.4.22'
}

tasks.named('test') {
    jvmArgs += [
            "-XX:+AllowRedefinitionToAddDeleteMethods",
            "-XX:+ShowCodeDetailsInExceptionMessages"
    ]
    useJUnitPlatform()
}

tasks.withType(JavaCompile).each {
    it.options.compilerArgs.add('--enable-preview')
}